add prototypes to return customer name and pizza topping selections

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <form class="order-form">
       <div class="row">
         <div class="col">
-          <input type="text" class="form-control" placeholder="First name">
+          <input id="input-first-name" type="text" class="form-control" placeholder="First name">
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Last name">
+          <input id="input-last-name" type="text" class="form-control" placeholder="Last name">
         </div>
       </div>
       <div class="form-group">
