add formula to increase cost withbased on topping selection

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <div class="form-group">
         <label for="exampleFormControlSelect1">Size</label>
         <select class="form-control" id="select-size">
-          <option>Medium</option>
-          <option>Large</option>
-          <option>Family</option>
+          <option value=2>Medium</option>
+          <option value=3>Large</option>
+          <option value=4>Family</option>
         </select>
       </div>
       <button id="submit-order-button" type="submit" class="btn btn-primary">Order pizza!</button>
