begin styling page - add header and card style

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <title>Island Pie Pizza</title>
 </head>
 <body>
-  <h1>Island Pie</h1>
-  <div class="container">
-    <form class="order-form">
+  <div class="container center">
+    <img id="banner-photo" src="img/island-pie-banner.jpg" alt="Island Pie Logo">
+    <form class="order-form card">
       <div class="row">
         <div class="col">
           <input id="input-first-name" type="text" class="form-control" placeholder="First name">
