--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Prata|Vidaloka" rel="stylesheet">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
   <title>Island Pie Pizza</title>
@@ -12,6 +13,7 @@
   <div class="container center">
     <img id="banner-photo" src="img/island-pie-banner.jpg" alt="Island Pie Logo">
     <form class="order-form card">
+      <h2>Customer Information</h2>
       <div class="row">
         <div class="col">
           <input id="input-first-name" type="text" class="form-control" placeholder="First name">
@@ -20,6 +22,7 @@
           <input id="input-last-name" type="text" class="form-control" placeholder="Last name">
         </div>
       </div>
+      <h2>Create Your Pizza</h2>
       <div class="form-group">
         <label for="exampleFormControlSelect2">Toppings</label>
         <select multiple class="form-control" id="select-toppings">
@@ -45,7 +48,7 @@
         <p>Name: <span id="customer-name"></span></p>
         <p>Toppings: <span id="chosen-toppings"></span></p>
         <p>Size: <span id="chosen-size"></span></p>
-        <p>Cost: <span id="total-cost"></span></p>
+        <p><strong>Total: <span id="total-cost"></span></strong></p>
     </div>
   </div>
 </body>
