--- a/index.html
+++ b/index.html
@@ -14,12 +14,37 @@
     <img id="banner-photo" src="img/island-pie-banner.jpg" alt="Island Pie Logo">
     <form class="order-form card">
       <h2>Customer Information</h2>
-      <div class="row">
+      <div class="customer-info row">
         <div class="col">
           <input id="input-first-name" type="text" class="form-control" placeholder="First name">
         </div>
         <div class="col">
           <input id="input-last-name" type="text" class="form-control" placeholder="Last name">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputAddress">Address</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Deer Harbor Drive">
+      </div>
+      <div class="form-group">
+        <label for="inputAddress2">Address 2</label>
+        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, unit, suite">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputCity">City</label>
+          <input type="text" class="form-control" id="inputCity">
+        </div>
+        <div class="form-group col-md-4">
+          <label for="inputState">State</label>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>Washington</option>
+          </select>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="inputZip">Zip</label>
+          <input type="text" class="form-control" id="inputZip">
         </div>
       </div>
       <h2>Create Your Pizza</h2>
