--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <div class="container center">
     <img id="banner-photo" src="img/island-pie-banner.jpg" alt="Island Pie Logo">
     <form class="order-form card">
+      <button id="carryout" type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+        Carryout
+      </button>
+      <button id="delivery" type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+        Delivery
+      </button>
       <h2>Customer Information</h2>
       <div class="customer-info row">
         <div class="col">
@@ -22,29 +28,31 @@
           <input id="input-last-name" type="text" class="form-control" placeholder="Last name">
         </div>
       </div>
-      <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Deer Harbor Drive">
-      </div>
-      <div class="form-group">
-        <label for="inputAddress2">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, unit, suite">
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity">
+      <div class="delivery-form">
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Deer Harbor Drive">
         </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">State</label>
-          <select id="inputState" class="form-control">
-            <option selected>Choose...</option>
-            <option>Washington</option>
-          </select>
+        <div class="form-group">
+          <label for="inputAddress2">Address 2</label>
+          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, unit, suite">
         </div>
-        <div class="form-group col-md-2">
-          <label for="inputZip">Zip</label>
-          <input type="text" class="form-control" id="inputZip">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" id="inputCity">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <select id="inputState" class="form-control">
+              <option selected>Choose...</option>
+              <option>Washington</option>
+            </select>
+          </div>
+          <div class="form-group col-md-2">
+            <label for="inputZip">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+          </div>
         </div>
       </div>
       <h2>Create Your Pizza</h2>
@@ -66,7 +74,7 @@
           <option value=4>Family</option>
         </select>
       </div>
-      <button id="submit-order-button" type="submit" class="btn btn-primary">Order pizza!</button>
+      <button id="submit-order-button" type="submit" class="btn btn-primary">Place Order</button>
     </form>
     <div class="order-details">
       <h2>Order Details:</h2>
