--- a/index.html
+++ b/index.html
@@ -90,11 +90,14 @@
     </form>
     <div class="card order-details">
       <h2>Order Confirmed!</h2>
-      <h4>Details:</h4>
-        <p>Name: <span id="customer-name"></span></p>
-        <p>Toppings: <span id="chosen-toppings"></span></p>
-        <p>Size: <span id="chosen-size"></span></p>
-        <p><strong>Total: <span id="total-cost"></span></strong></p>
+      <p>Thank you for your business.</p>
+      <h2>Details:</h2>
+        <p>Name: <br><span id="customer-name"></span></p>
+        <p>Address: <br><span id="customer-address"></span></p>
+        <p>Ready by: <br><span id="target-time"></span><p>
+        <p>Toppings: <br><span id="chosen-toppings"></span></p>
+        <p>Size: <br><span id="chosen-size"></span></p>
+        <p><strong>Total: <br><span id="total-cost"></span></strong></p>
     </div>
   </div>
 </body>
