add rows and columns in order confirmation section

--- a/index.html
+++ b/index.html
@@ -92,12 +92,30 @@
       <h2>Order Confirmed!</h2>
       <p>Thank you for your business.</p>
       <h2>Details:</h2>
-        <p>Name: <br><span id="customer-name"></span></p>
-        <p>Address: <br><span id="customer-address"></span></p>
-        <p>Ready by: <br><span id="target-time"></span><p>
-        <p>Toppings: <br><span id="chosen-toppings"></span></p>
-        <p>Size: <br><span id="chosen-size"></span></p>
-        <p><strong>Total: <br><span id="total-cost"></span></strong></p>
+      <div class="row">
+        <div class="col-md-6">
+          <p><strong>Name: </strong><br><span id="customer-name"></span></p>
+        </div>
+        <div class="col-md-6">
+          <p><strong>Address: </strong><br><span id="customer-address"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p><strong>Toppings: </strong><br><span id="chosen-toppings"></span></p>
+        </div>
+        <div class="col-md-6">
+          <p><strong>Size: </strong><br><span id="chosen-size"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p><strong>Ready by: </strong><br><span id="target-time"></span><p>
+        </div>
+        <div class="col-md-6">
+          <p><strong>Total: </strong><br><span id="total-cost"></span></strong></p>
+        </div>
+      </div>
     </div>
   </div>
 </body>
