--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <label for="inputState">State</label>
               <select id="inputState" class="form-control">
                 <option selected>Choose...</option>
-                <option>Washington</option>
+                <option>WA</option>
               </select>
             </div>
             <div class="form-group col-md-2">
