add confirmation messages when user clicks on carryout or delivery

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             Delivery
           </button>
         </div>
+        <div id="delivery-message">
+          <p>Okay, we'll deliver! Please enter your address below.</p>
+        </div>
+        <div id="carryout-message">
+          <p>Sounds good! We can't wait to see you in store.</p>
+        </div>
         <h2>Customer Information</h2>
         <div class="customer-info row">
           <div class="col">
