add icons and pictures

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
           </button>
         </div>
         <div id="delivery-message">
+          <img src="img/checkbox.png" style="width: 10%" alt="">
           <p>Okay, we'll deliver! Please enter your address below.</p>
         </div>
         <div id="carryout-message">
+          <img src="img/checkbox.png" style="width: 10%" alt="">
           <p>Sounds good! We can't wait to see you in store.</p>
         </div>
         <h2>Customer Information</h2>
@@ -99,6 +101,7 @@
   </div>
     <div class="card order-details">
       <h2>Order Confirmed!</h2>
+      <img src="img/yay.jpg" style="width: 20%" alt="">
       <p>Thank you for your business.</p>
       <h2>Details:</h2>
       <div class="row">
