--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
               <input class="form-control" type="time" value="19:45:00" id="order-time">
             </div>
           </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Any special requests?</label>
+            <textarea class="form-control" id="request-box" rows="3" placeholder="Extra red pepper flakes and parmesan, please!"></textarea>
+          </div>
           <button id="submit-order-button" type="submit" class="center btn btn-primary">Place Order</button>
       </form>
     </div>
@@ -129,6 +133,10 @@
           <p><strong>Total: </strong><br><span id="total-cost"></span></strong></p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p><strong>Requests: </strong><br><span id="special-requests"></span><p>
+        </div>
       <button id="home-button" type="submit" class="center btn btn-primary">Order Again</button>
     </div>
   </div>
