reformat order confirmation to hide unnecessary information

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="form-group col-md-4">
               <label for="inputState">State</label>
               <select id="inputState" class="form-control">
-                <option selected>Choose...</option>
+                <option selected> </option>
                 <option>WA</option>
               </select>
             </div>
@@ -69,7 +69,8 @@
         <img class="center" src="img/rollingpin.jpg" style="width: 25%" alt="Rolling pin">
         <h2>Create Your Pizza</h2>
         <div class="form-group">
-          <label for="exampleFormControlSelect2">What would you like on your pizza?</label>
+          <label for="exampleFormControlSelect2">What would you like on your pizza? (+ $2.00 each)</label>
+          <p>⌘ + click to select multiple</p>
           <select multiple class="form-control" id="select-toppings">
             <option>Extra Cheese</option>
             <option>Mushrooms</option>
@@ -88,8 +89,8 @@
           <label for="exampleFormControlSelect1">What size should we make it?</label>
           <select class="form-control" id="select-size">
             <option value=2>Medium</option>
-            <option value=3>Large</option>
-            <option value=4>Family</option>
+            <option value=3>Large (+ $1.00)</option>
+            <option value=4>Family (+ $2.00)</option>
           </select>
         </div>
           <div class="form-group row">
