--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div class="container center">
     <img id="banner-photo" src="img/island-pie-banner.jpg" alt="Island Pie Logo">
+    <!-- Order Form -->
     <div class="order-form-container">
       <form class="order-form card">
         <div class="center btn-group" role="group" aria-label="Basic example">
@@ -39,6 +40,7 @@
             <input id="input-last-name" type="text" class="form-control" placeholder="Last name">
           </div>
         </div>
+        <!-- Delivery Form -->
         <div class="delivery-form">
           <div class="form-group">
             <label for="inputAddress">Address</label>
@@ -93,19 +95,20 @@
             <option value=4>Family (+ $4.00)</option>
           </select>
         </div>
-          <div class="form-group row">
-            <p>What time would you like to eat?</p>
-            <div class="col-5">
-              <input class="form-control" type="time" value="19:45:00" id="order-time">
-            </div>
+        <div class="form-group row">
+          <p>What time would you like to eat?</p>
+          <div class="col-5">
+            <input class="form-control" type="time" value="19:45:00" id="order-time">
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Any special requests?</label>
-            <textarea class="form-control" id="request-box" rows="3" placeholder="Extra red pepper flakes and parmesan, please!"></textarea>
-          </div>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Any special requests?</label>
+          <textarea class="form-control" id="request-box" rows="3" placeholder="Extra red pepper flakes and parmesan, please!"></textarea>
+        </div>
         <button id="submit-order-button" type="submit" class="center btn btn-primary">Place Order</button>
       </form>
     </div>
+    <!-- Order Confirmation -->
     <div class="card order-details">
       <h2>Order Confirmed!</h2>
       <img src="img/yay.jpg" style="width: 20%" alt="">
@@ -131,7 +134,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <p><strong>Ready by: </strong><br><span id="target-time"></span><p>
+          <p><strong>Ready by: </strong><br><span id="target-time"></span></p>
         </div>
         <div class="col-md-6">
           <p><strong>Total: </strong><br><span class="total-cost"></span></strong></p>
@@ -139,10 +142,10 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p><strong>Requests: </strong><br><span id="special-requests"></span><p>
+          <p><strong>Requests: </strong><br><span id="special-requests"></span>
         </div>
-      <button id="home-button" type="submit" class="center btn btn-primary">Order Again</button>
+        <button id="home-button" type="submit" class="center btn btn-primary">Order Again</button>
+      </div>
     </div>
-  </div>
 </body>
 </html>
