--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Prata|Vidaloka" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Prata|Vidaloka|Crete+Round" rel="stylesheet">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
   <title>Island Pie Pizza</title>
@@ -42,6 +42,7 @@
         </div>
         <!-- Delivery Form -->
         <div class="delivery-form">
+          <p class="question">Where should we deliver?</p>
           <div class="form-group">
             <label for="inputAddress">Address</label>
             <input type="text" class="form-control" id="inputAddress" placeholder="1234 Deer Harbor Drive">
@@ -71,7 +72,7 @@
         <img class="center" src="img/rollingpin.jpg" style="width: 25%" alt="Rolling pin">
         <h2>Create Your Pizza</h2>
         <div class="form-group">
-          <label for="exampleFormControlSelect2">What would you like on your pizza? (+ $2.00 each)</label>
+          <label class="question" for="exampleFormControlSelect2">What would you like on your pizza? (+ $2.00 each)</label>
           <p>⌘ + click to select multiple</p>
           <select multiple class="form-control" id="select-toppings">
             <option>Extra Cheese</option>
@@ -88,7 +89,7 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="exampleFormControlSelect1">What size should we make it?</label>
+          <label class="question" for="exampleFormControlSelect1">What size should we make it?</label>
           <select class="form-control" id="select-size">
             <option value=2>Medium</option>
             <option value=3>Large (+ $2.00)</option>
@@ -96,13 +97,17 @@
           </select>
         </div>
         <div class="form-group row">
-          <p>What time would you like to eat?</p>
-          <div class="col-5">
+          <div class="col-md-6">
+            <p class="question">Pickup/Delivery Time:</p>
             <input class="form-control" type="time" value="19:45:00" id="order-time">
+          </div>
+          <div class="col-md-6">
+            <p class="question">Estimated Wait Time:</p>
+            <p>~25 minutes</p>
           </div>
         </div>
         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Any special requests?</label>
+          <label class="question" for="exampleFormControlTextarea1">Any special requests?</label>
           <textarea class="form-control" id="request-box" rows="3" placeholder="Extra red pepper flakes and parmesan, please!"></textarea>
         </div>
         <button id="submit-order-button" type="submit" class="center btn btn-primary">Place Order</button>
@@ -112,7 +117,7 @@
     <div class="card order-details">
       <h2>Order Confirmed!</h2>
       <img src="img/yay.jpg" style="width: 20%" alt="">
-      <p>Thank you for your business.</p>
+      <p class="question">Thank you for your business.</p>
       <br>
       <br>
       <h2>Details:</h2>
@@ -137,7 +142,8 @@
           <p><strong>Ready by: </strong><br><span id="target-time"></span></p>
         </div>
         <div class="col-md-6">
-          <p><strong>Total: </strong><br><span class="total-cost"></span></strong></p>
+          <p><strong>Total: </strong><br><span class="total-cost"></span></strong>
+          </p>
         </div>
       </div>
       <div class="row">
@@ -147,5 +153,6 @@
         <button id="home-button" type="submit" class="center btn btn-primary">Order Again</button>
       </div>
     </div>
+  </div>
 </body>
 </html>
